[project]
name = "bmo-statement-to-csv"
version = "0.1.0"
description = "Convert BMO bank statement PDFs to CSV"
requires-python = ">=3.10"
dependencies = [
    "pdfplumber>=0.11.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
bmo-statement = "bmo_statement.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
